# course_work_3

./: README.md  pyproject.toml  test.json
data/: const.txt
src/: main.py
tests/: test.json  test_utils.py
utils/: utils.py
